assets/style.css
@import 'font/font.css';

* {
  margin: 0;
  padding: 0;
  outline: none;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
}

*::-webkit-scrollbar {
  display: none;
}

body {
  background: #000000;
  overflow: hidden;
}

.darken {
  position: absolute;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);
}

.landing {
  position: relative;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  z-index: 1;
}

.landing > .cover {
  position: absolute;
  width: 110%;
  height: 110%;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  object-fit: cover;
  object-position: 50% 50%;
}

.landing > .title {
  position: absolute;
  width: 741px;
  height: 155px;
  left: calc(50% - 741px/2 - 0.5px);
  top: calc(50% - 155px/2 - 75.5px);
  font-family: Product Sans, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 128px;
  line-height: 155px;
  text-align: center;
  color: #FFFFFF;
}

.landing > .description {
  position: absolute;
  width: 800px;
  height: 140px;
  left: calc(50% - 800px/2 - 0.5px);
  top: calc(50% - 140px/2 + 84px);
  font-family: Noto Sans KR, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 48px;
  line-height: 70px;
  text-align: center;
  color: #FFFFFF;
}

.landing > .description > span {
  display: inline-block;
}

.landing > .description > span.highlight {
  position: relative;
  margin: 8px 0 0 0;
  padding: 4px 12px;
  z-index: 1;
}

.landing > .description > span.highlight::before {
  display: block;
  position: absolute;
  left: 0;
  right: 100%;
  top: 4px;
  bottom: 4px;
  content: '';
  background: linear-gradient(90deg, #FF50A0 0%, #FF298B 100%);
  border-radius: 8px;
  transition: 1s cubic-bezier(.53,.07,.24,.98);
  z-index: -1;
}

.landing > .description > span.highlight.active::before {
  right: 0;
}

.landing > .scroll {
  position: absolute;
  width: 128px;
  height: 128px;
  left: 50%;
  transform: translateX(-50%);
  bottom: 38px;
  cursor: pointer;
}

.section {
  position: relative;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.section > .cover {
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  object-fit: cover;
  object-position: 50% 50%;
  transition: 0.5s opacity;
}

.section > .cover.active {
  opacity: 1;
}

.fixed {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.fixed > .content {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 100vw;
}

.fixed > .content > .line {
  display: block;
  opacity: 0;
  font-family: Noto Sans KR, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 48px;
  text-align: center;
  color: #FFFFFF;
  transition: 0.5s opacity;
}

.fixed > .content > .line.active {
  opacity: 1;
}

.fixed > .content > .line > span {
  position: relative;
  transition: 1s cubic-bezier(.53,.07,.24,.98);
  z-index: 1;
}

.fixed > .content > .line > span.highlight::before {
  display: block;
  position: absolute;
  left: 0;
  right: 100%;
  top: 4px;
  bottom: 4px;
  content: '';
  background: linear-gradient(90deg, #FF50A0 0%, #FF298B 100%);
  border-radius: 8px;
  transition: 1s cubic-bezier(.53,.07,.24,.98);
  z-index: -1;
}

.fixed > .content > .line > span.highlight.active::before {
  right: 0;
}

.fixed > .content > .line > span.active {
  padding: 4px 12px;
}

.fixed > .scroll {
  position: absolute;
  opacity: 0;
  width: 128px;
  height: 128px;
  left: 50%;
  transform: translateX(-50%);
  bottom: 38px;
  transition: 0.5s opacity;
}

.fixed > .scroll.active {
  opacity: 1;
  cursor: pointer;
}

.fixed > .music {
  position: absolute;
  top: 77px;
  left: 50%;
  height: 78px;
  transform: translateX(-50%);
  vertical-align: top;
  font-size: 0;
  opacity: 0;
  transition: 0.5s opacity;
}

.fixed > .music.active {
  opacity: 1;
}

.fixed > .music.left {
  position: absolute;
  height: 78px;
  width: 254px;
  left: 170px;
  top: 140px;
  transform: none;
}

.fixed > .music > .icon {
  margin: 15px 43px 15px 0;
}

.fixed > .music > .title {
  display: inline-block;
  height: 52px;
  font-family: Noto Sans KR, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 36px;
  line-height: 52px;
  color: #FFFFFF;
  vertical-align: top;
  white-space: nowrap;
}

.fixed > .music > .album {
  position: absolute;
  left: 91px;
  top: 52px;
  height: 25px;
  font-family: Noto Sans KR, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 18px;
  line-height: 26px;
  color: #B8B8B8;
  vertical-align: bottom;
}

.fixed > .izone {
  position: absolute;
  width: 275px;
  height: 113px;
  right: 170px;
  top: 140px;
  opacity: 0;
  transition: 0.5s opacity;
}

.fixed > .izone.active {
  opacity: 1;
}

.fixed > .lyrics {
  position: absolute;
  height: 52px;
  left: 170px;
  top: 248px;
  font-family: Noto Sans KR, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 36px;
  line-height: 52px;
  color: #FFFFFF;
  opacity: 0;
  transition: 0.5s opacity;
}

.fixed > .lyrics.active {
  opacity: 1;
}

.sns {
  position: absolute;
  width: 52px;
  height: 52px;
  opacity: 0;
  transition: 0.5s opacity;
  bottom: 170px;
}

.sns.active {
  opacity: 1;
  cursor: pointer;
}

.sns.twitter {
  left: calc(50% - 52px/2 - 100px);
}

.sns.instagram {
  left: calc(50% - 52px/2);
}

.sns.youtube {
  left: calc(50% - 52px/2 + 100px);
}

@media (max-width: 880px) {
  .landing > .title {
    font-size: 64px;
    height: 84px;
    top: calc(50% - 84px/2 - 75.5px);
  }

  .landing > .description {
    font-size: 28px;
    line-height: 52px;
  }

  .landing > .description > span.highlight {
    margin: 0;
  }

  .fixed > .scroll,
  .landing > .scroll {
    width: 96px;
    height: 96px;
  }

  .fixed > .music {
    top: 84px;
    zoom: 0.7;
  }

  .fixed > .content {
    zoom: 0.6;
    width: 200vw;
  }

  .fixed > .izone {
    width: 95px;
    height: 39px;
    bottom: 64px;
    top: auto;
    left: 50%;
    transform: translateX(-50%);
  }

  .fixed > .music.left {
    zoom: 0.7 !important;
    left: 50%;
    top: 64px;
    transform: translateX(-50%);
  }

  .fixed > .lyrics {
    top: 138px;
    left: 36px;
    right: 36px;
    text-align: center;
    font-size: 24px;
  }

}

@media (max-width: 480px) {
  .landing > .title {
    font-size: 48px;
    height: 74px;
    top: calc(50% - 74px/2 - 75.5px);
  }

  .landing > .description {
    font-size: 21px;
    line-height: 42px;
  }

  .fixed > .music {
    top: 96px;
    zoom: 0.5;
  }

  .fixed > .content {
    zoom: 0.5;
    width: 200vw;
  }
}

@media (max-width: 360px) {
  .landing > .title {
    font-size: 42px;
  }

  .landing > .description {
    font-size: 18px;
    line-height: 36px;
  }

  .fixed > .scroll,
  .landing > .scroll {
    width: 86px;
    height: 86px;
  }

  .fixed > .content {
    zoom: 0.3;
    width: 333vw;
  }
}

